bin_PROGRAMS = file_descriptor_client
file_descriptor_client_SOURCES = file-descriptor-client.c

#file_descriptor_client_CFLAGS = -DMECHANISM_PATH=\"$(pkglibexecdir)/file-descriptor-mechanism\"

pkglibexec_PROGRAMS = file_descriptor_mechanism
file_descriptor_mechanism_SOURCES = file-descriptor-mechanism.c